recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
var j:Int = 0;
avance(length:Double)
droite(angle:Double)
j=2*angle;
tree(steps, shrink*length, j, shrink)
}
